# ChangeLog for app-text/silvercity
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/silvercity/ChangeLog,v 1.5 2005/05/01 02:48:29 trapni Exp $

  01 May 2005; Christian Parpart <trapni@gentoo.org>
  silvercity-0.9.5.ebuild:
  added to ~amd64

  23 Oct 2004; Jason Wever <weeve@gentoo.org> silvercity-0.9.5.ebuild:
  Added ~sparc keyword.

  31 Aug 2004; David Holm <dholm@gentoo.org> silvercity-0.9.5.ebuild:
  Added to ~ppc.

*silvercity-0.9.5 (09 Aug 2004)

  09 Aug 2004; Stuart Herbert <stuart@gentoo.org> +metadata.xml,
  +silvercity-0.9.5.ebuild:
  Initial import; thanks to Matsui Tetsushi <VED03370@nifty.ne.jp>; see bug
  #49835
