@@ -1,4 +1,6 @@
-MD5 a9265fb7b54b332ae7a146e5718e4ab6 ChangeLog 706
 MD5 7274982e8edcc3cb3a7d2e82764bc43c silvercity-0.9.5.ebuild 572
+MD5 7ea6656d1f565cd2e93e08ed0d244afb silvercity-0.9.5-r1.ebuild 895
+MD5 6997745bb06849f41e36a5ceb77ea5e1 ChangeLog 954
 MD5 4f723686129a68a7dcb5ce4e21c775ad metadata.xml 223
+MD5 712defea7eee794d4e5337ce64fe9452 files/digest-silvercity-0.9.5-r1 68
 MD5 712defea7eee794d4e5337ce64fe9452 files/digest-silvercity-0.9.5 68
